chore: update docker file to prod

--- a/dockerfile.prod
+++ b/dockerfile.prod
@@ -21,7 +21,7 @@ RUN npm run build
 RUN npm ci -f --only=production && npm cache clean --force
 
 # Production stage
-FROM node:21-alpine3.19
+FROM node:21-alpine3.19 as prod
 
 WORKDIR /app
 
